# buecherhallen-scraper

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py
app/templates/: index.html
